tests/snapshots/test_examples__fail__safety1_proof_invariants.fly.houdini.snap
---
source: tests/test_examples.rs
expression: combined_stdout_stderr
---
Running Houdini, candidate invariants are:
    !p
    !p
    !q
    p
    q

Checking initiation:
    Checking !p
    Checking !p
    Checking !q
    Checking p
        Got model
        Pruning p
        Pruning q
Candidate invariants are:
    !p
    !p
    !q

Computing fixed point:
    Checking !p
    Checking !p
    Checking !q
Fixed point reached
verifies!

======== STDERR: ===========

