tests/snapshots/test_examples__fail__safety3_extra_inv.fly.houdini.cvc5.snap
---
source: tests/test_examples.rs
expression: stdout
---
Running Houdini, candidate invariants are:
    x
    y
    z

Checking initiation:
    Checking x
    Checking y
    Checking z
Candidate invariants are:
    x
    y
    z

Computing fixed point:
    Checking x
    Checking y
    Checking z
        Got model
        Pruning z
Candidate invariants are:
    x
    y

    Checking x
    Checking y
Fixed point reached
verifies!

